# city_events_ml

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
city_events_ml/: evaluation.py  features.py  io.py  models.py  pipelines.py  serialization.py  workflows.py
tests/: test_smoke.py
