[build-system]
requires = ["setuptools>=78", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "city_events_ml"
version = "0.1.0"
description = "SF safety event frequency modeling pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.3",
  "numpy>=2.1",
  "scikit-learn>=1.7",
  "matplotlib>=3.10",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["city_events_ml*"]
